# mordred-rs

./: .commitlintrc.yml  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  bench_compare.py  bench_correctness.py  bench_python.py  bench_python_results.json  bench_single.py  clippy.toml  deny.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  python-wheels.yml  release.yml
mordred-cli/: Cargo.toml
mordred-cli/src/: main.rs
mordred-core/: Cargo.toml
mordred-core/examples/: bench.rs
mordred-core/src/: error.rs  lib.rs
mordred-core/src/descriptor/: atom_count.rs  bond_count.rs  connectivity.rs  constitutional.rs  information_content.rs  mod.rs  ring_count.rs  topological.rs
mordred-core/src/molecule/: aromaticity.rs  atom.rs  bond.rs  element.rs  mod.rs  mol.rs  rings.rs  simd.rs  smiles.rs
mordred-core/tests/: integration.rs
mordred-ffi/: Cargo.toml  build.rs  cbindgen.toml
mordred-ffi/cmake/: CMakeLists.txt
mordred-ffi/include/: mordred.h  mordred.hpp
mordred-ffi/src/: lib.rs
mordred-py/: Cargo.toml  pyproject.toml
mordred-py/python/mordred/: __init__.py  _compat.py
mordred-py/python/mordred/descriptors/: __init__.py
mordred-py/src/: lib.rs
mordred-py/tests/: test_calculator.py
