[workspace]
members = ["mordred-core", "mordred-py", "mordred-cli", "mordred-ffi"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/ctr26/mordred-rs"
keywords = ["chemistry", "molecular-descriptors", "cheminformatics", "smiles", "mordred"]
categories = ["science", "algorithms"]

[workspace.dependencies]
mordred-core = { path = "mordred-core", version = "0.2.1" }
petgraph = "0.7"
nalgebra = "0.33"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
thiserror = "2"
csv = "1"
cbindgen = "0.28"
