[package]
name = "mordred-core"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core molecular descriptor calculator — Rust port of mordred"

[features]
default = []
simd = []

[dependencies]
petgraph = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
