[package]
name = "mordred-py"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for mordred-rs molecular descriptor calculator"
publish = false

[lib]
name = "_mordred_core"
crate-type = ["cdylib"]

[dependencies]
mordred-core = { workspace = true }
pyo3 = { workspace = true }
