[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mordred"
version = "0.1.0"
description = "Fast molecular descriptor calculator — Rust-powered drop-in replacement for mordred"
requires-python = ">=3.9"
license = "MIT"

[project.optional-dependencies]
rdkit = []
pandas = ["pandas"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mordred._mordred_core"
