[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mordred"
version = "0.1.0"
description = "Fast molecular descriptor calculator — Rust-powered drop-in replacement for mordred"
requires-python = ">=3.9"
license = "MIT"

[project.optional-dependencies]
rdkit = []
pandas = ["pandas"]
dev = ["pytest", "pandas", "ruff"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mordred._mordred_core"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (Google style)
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
